[JENKINS-39563] remove excess DOM now that we've verified the text align issue in IE11 is not flexbox related (and possible flexbox hacks won't help us anyways)

--- a/less/components/checkbox.less
+++ b/less/components/checkbox.less
@@ -25,11 +25,8 @@
         border: solid 1px rgba(73, 73, 73, 0.5);
     }
 
-    .Checkbox-text-wrapper {
-        margin-left: 5px;
-    }
-
     .Checkbox-text {
+        margin-left: 5px;
     }
 
     // use opacity to show/hide the icon, driving overall Checkbox height
